[tool.poetry]
name = "repl_nix_Kanban-board-1"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Werkzeug = "^2.2.2"
Flask-RESTful = "^0.3.9"
matplotlib = "^3.5.3"
SQLAlchemy = "^1.4.41"
Flask-SQLAlchemy = "^2.5.1"
numpy = "^1.23.2"
Flask-Bcrypt = "^1.0.1"
Flask-Cors = "^3.0.10"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
